add prisma script

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "name": "inventory-management",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "echo 'ESLint is disabled'"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "lint": "echo 'ESLint is disabled'"
+},
+
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^4.1.0",
