--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:RAvyas@123@db.wwfdefepfnavcqfdavdo.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:RAvyas@123@db.wwfdefepfnavcqfdavdo.supabase.co:5432/postgres?sslmode=require"
 AUTH_SECRET="radhika____"
